--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 <section>
     <h1>40523128許凱翔的網際內容管理</h1>
     <p>
-    <a href="https://github.com/s40523130/2017springwcm_g7">WCM7</a>
+    <a href="https://github.com/s40523128/2017springwcm_hw">WCM7</a>
     </p>
     <p>
     <a href="blog/index.html">許凱翔的blog</a>
     </p>
     <p>
-    <a href="https://vimeo.com/user58667333">許凱翔的Vimeo</a>
+    <a href="https://vimeo.com/home">許凱翔的Vimeo</a>
     </p>
 <section>
     </script>
